# Sumry

./: README.md  app.py  pyproject.toml
api/: main.py  models.py
api/routers/: summarize.py
api/services/: pdf_service.py  summarize_service.py
config/: settings.py
core/: download_pdf.py  ollama_client.py  pdf2text.py  summarizer.py
