[project]
name = "sumry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fitz>=0.0.1.dev2",
    "httpx>=0.28.1",
    "langchain>=0.3.23",
    "pydantic>=2.11.3",
    "pymupdf>=1.25.5",
    "streamlit>=1.44.1",
    "uvicorn>=0.34.0",
]
